--- a/style.css
+++ b/style.css
@@ -1,115 +1,189 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    background-color: #F5F7F8;
-    font-family: monospace;
-}
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #E6F9F9;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 1rem 2rem;
-}
-h1{
-    color: #02B1B5;
-    padding-left: 35px;
-}
-header span{
-    font-size: 50px;
-    justify-content: center;
-    align-self: center;
-    background: none;
-
-}
-img {
-    height: 150px;
-    background: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* css untuk tabs */
-.tabs{
-    display: flex;
+body {
+  font-family: monospace;
+  background-color: #c8e8e8ff;
+  color: #333;
+}
+
+/* Header */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #e6f9f9;
+  padding: 1rem 2rem;
+}
+
+header img {
+  height: 45px;
+}
+
+header span {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+/* Tabs container */
+.tabs {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  width: 100%;
+  max-width: 1200px;
+  margin: 1rem auto;
+}
+
+/* Sidebar tab */
+.tabs_sidebar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  background: #f5f7f8;
+  border-radius: 30px;
+  margin-bottom: 0.5rem;
+}
+
+.tab_button {
+  flex: 1;
+  min-width: 100px;
+  padding: 10px;
+  background: #f5f7f8;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 60px;
+  border-radius: 30px 30px 0 0;
+  transition: background 0.2s;
+}
+
+.tab_button:hover {
+  background: #bcd1e8ff;
+}
+
+.tab_button:active {
+  background: #017c7f;
+  color: #fff;
+}
+
+.tab_button--active {
+  font-weight: bold;
+  background: #b5e2ff;
+}
+
+/* Tab content */
+.tab_content {
+  display: none;
+  background: #f5fbffff;
+  border-radius: 0 0 30px 30px;
+  padding: 2rem;
+}
+
+.tab_content--active {
+  display: block;
+}
+
+.tab_content h1 {
+  color: #0c1669ff;
+  margin-bottom: 1rem;
+}
+
+/* Isi form */
+.isi {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.isi span {
+  font-weight: bold;
+}
+
+.isi input,
+.isi select,
+.isi button {
+  padding: 1rem;
+  font-size: 1rem;
+  border-radius: 12px;
+  border: 1px solid #ccc;
+}
+
+/* Input & select */
+.isi input {
+  width: 100%;
+  max-width: 300px;
+}
+
+.isi select {
+  width: 100%;
+  max-width: 200px;
+}
+
+/* Output span */
+.isi .length_output,
+.isi .temp_output,
+.isi .time_output,
+.isi .volume_output,
+.isi .area_output {
+  display: inline-block;
+  min-width: 80px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #222;
+  background: none;
+  border: none;
+  padding: 0.3rem 0;
+}
+
+/* Tombol */
+.isi button {
+  background: #00bfa6;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.2s;
+  width: fit-content;
+  min-width: 120px;
+}
+
+.isi button:hover {
+  background: #009f8a;
+}
+
+/* Responsif */
+@media (max-width: 768px) {
+  .tabs_sidebar {
     flex-direction: column;
-    margin: 100px;
-    border-radius: 30px;
-    width: 2200px;
-    height: 720px;
-    background: #b5e2ff;
-}
-.tabs_sidebar{
+    align-items: stretch;
+  }
+
+  .tab_button {
+    border-radius: 12px;
+    height: auto;
+  }
+
+  .isi input,
+  .isi select,
+  .isi button {
     width: 100%;
-    flex-shrink: 0;
-    background: #F5F7F8;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    border-radius: 30px;
+    max-width: none;
+  }
 }
-.tab_button{
-    display: block;
-    padding: 10px;
-    background: #F5F7F8;
-    border: none;
-    width: 100%;
-    outline: none;
-    cursor: pointer;
-    font-size: 50px;
-    height: 100px;
-    border-radius: 30px 30px 0px 0px;
-    border: 0px;
-}
-.tab_button:hover{
-    background: #02B1B5;
-}
-.tab_button:active{
-    background: #017C7F;
-}
-.tab_button:not(:last-of-type) {
-    border-right: 1px solid #cccccc;
-}
-.tab_button--active{
-    font-weight: bold;
-    background: #b5e2ff;
-    border-radius: 30px 30px 0px 0px;
-}
-.tab_content{
-    padding: 15px;
-    font-size: 3rem;
-    display: none;
-    background: #b5e2ff;
-}
-.tab_content *{
-    background: none;
-}
-.tab_content input{
-    width: 40%;
-    height: 80px;
-    font-size: 100%;
-}
-.tab_content select{
-    width: 15%;
-    height: 80px;
-    font-size: 100%;
-}
-.isi{
-    padding-left: 100px;
-}
-.isi span{
-    padding-top: 20px;
-}
-.tab_content button{
-    width: 10%;
-    height: 60px;
-    font-size: 100%;
-    border-radius: 20px;
-}
-.tab_content--active{
-    display: block;
-    border-radius: 0px 0px 30px 30px;
-}
-.tab_content > :first-child{
-    margin-top: 0;
+
+@media (max-width: 480px) {
+  header {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+
+  .tab_content {
+    padding: 1rem;
+  }
 }
