--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ header span {
 .tabs {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
   width: 100%;
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: 3rem auto;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6); 
+  border-radius: 30px;
 }
 
 /* Sidebar tab */
@@ -131,7 +132,8 @@ header span {
 .isi .temp_output,
 .isi .time_output,
 .isi .volume_output,
-.isi .area_output {
+.isi .area_output,
+.isi .massa_output {
   display: inline-block;
   min-width: 80px;
   font-weight: bold;
